--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link"href=#formulario>Conviértete en orador</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-success"href="#">Comprar tickets</a>
+                    <a class="nav-link text-success"href="tickets.html">Comprar tickets</a>
                   </li>
                 </ul>
               </div>                
@@ -53,8 +53,8 @@
           <div id="contenido">
             <h1>Conf Bs As</h1>
             <p>Bs As llega por primera vez a Argentina. Un evento para compartir con <br> nuestra comunidad el conocimiento y experiencia de los expertos que <br>están creando el futuro de Internet. Ven a conocer a miembros del<br>  evento, a otros estudiantes de Codo a Codo y oradores de primer <br> nivel que tenemos para ti. Te esperamos!</p>
-            <button type="button" class="boton">Quiero ser orador</button>
-            <button type="button" class="boton" id="uno">Comprar tickets</button> 
+           <a href=#formulario> <button type="button" class="boton">Quiero ser orador</button></a>
+          <a href="/tickets.html"> <button type="button" class="boton" id="uno" href="tickets.html">Comprar tickets</button></a> 
           </div>
         </main>
 
